--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Day Bootstrap Template - Index</title>
+  <title>SESPEM S.A.S.</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -41,8 +41,10 @@
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
+          <i class="icofont-clock-time"></i> De Lun a Vie de 8:00a.m. a 12:00pm &nbsp;&nbsp;&nbsp;
         <i class="icofont-envelope"></i> <a href="mailto:operaciones@gruposespem.com">operaciones@gruposespem.com</a>
-        <i class="icofont-phone"></i> +57 300 680 9745
+        <i class="icofont-phone"></i> Tel: 6661689  &nbsp;&nbsp;&nbsp;
+       <i class="icofont-ui-cell-phone"></i> Cel: +57 300 680 9745
       </div>
       <div class="social-links">
         <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
@@ -112,7 +114,7 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
+          <div class="col-lg-6 order-1 order-lg-2 align-self-center" data-aos="fade-left">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
@@ -150,16 +152,16 @@
           <div class="col-lg-4" data-aos="fade-up">
             <div class="box">
               <span>01</span>
-              <h4>Lorem Ipsum</h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4><a href="files/PROTOCOLO%20DE%20BIOSEGURIDAD%20PARA%20LA%20PREVENSION%20DE%20LA%20TRANSMISION%20DEL%20COVID%2019%20%20GRUPO%20SESPEM.pdf" target="_blank"><fount>PROTOCOLO DE BIOSEGURIDAD COVID-19</fount></a></h4>
+              <p>Protocolo adoptado por SESPEM S.A.S. para la prevención de la transmisión del COVID 19</p>
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
             <div class="box">
               <span>02</span>
-              <h4>Repellat Nihil</h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+              <h4><a href="files/MANUAL%20INTEGRADO%20DEL%20GRUPO%20SESPEM%20%20.pdf" target="_blank"><fount>MANUAL INTEGRADO</fount></a></h4>
+              <p>Manual integrado del grupo SESPEM S.A.S.</p>
             </div>
           </div>
 
