--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <span>03</span>
-              <h4> Ad ad velit qui</h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4><a href="files/RESOLUCION%2000899%20%20DE%20FUNCIONAMIENTO%20DE%20SESPEM.pdf" target="_blank"><fount>FUNCIONAMIENTO DE LA EMPRESA</fount></a></h4>
+              <p>RESOLUCIÓN 00899  de funcionamiento de SESPEM</p>
             </div>
           </div>
 
