--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">CONTACTENOS</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -548,33 +548,43 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Contact</span>
-          <h2>Contact</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>Contactenos</span>
+          <h2>Contactenos</h2>
+          <p>Puedes dirigirte a nuestra oficinas en las siguientes direcciones o comunicarte con nosotros de las siguientes forma.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-lg-6">
+          <div class="col-lg-5">
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
-              <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <h3>Nuestra direcciones</h3>
+              <p>Pie de la Popa, Carrera 29C No. 19 - 43, Cartagena, Bolívar.</p>
+              <p>Cra. 3a #57-84, Bogotá.</p>
+              <p>Calle 16 #6-60, Centro, Valledupar, Cesar.</p>
+              <p>Cra 49 # 72 - 193 centro ejecutivo 74 oficina 8, Barranquilla, Atlantico.</p>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
-              <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <h3>Email</h3>
+              <p>rhumanos3@gruposespem.com</p>
+              <p>rhumanos7@gruposespem.com</p>
+              <p>servicioalclientevpar@gruposespem.com</p>
+              <p>pasante.rhumanosbta@gruposespem.com</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
-              <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <h3>Telefonos</h3>
+               <p>Barranquilla. 387 3813</p>
+               <p>Bogotá. 211 2006</p>
+              <p>Cartagena. 666 1689</p>
+              <p>Cartagena. 314 413 1771</p>
+              <p>valledupar. 580 5951</p>
             </div>
           </div>
 
@@ -583,9 +593,8 @@
         <div class="row" data-aos="fade-up">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3924.024531417443!2d-75.53653385503877!3d10.419626211712806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ef62f78e805ea49%3A0x517b9fd74dac3a20!2sGRUPO%20SESPEM!5e0!3m2!1ses-419!2sco!4v1589991023810!5m2!1ses-419!2sco" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
           </div>
-
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
