--- a/contratacion.html
+++ b/contratacion.html
@@ -106,9 +106,9 @@
 
         <ol>
           <li><a href="index.html">INICIO</a></li>
-          <li>Proceso selección</li>
+          <li>Proceso contratación</li>
         </ol>
-        <h2>SELECCIÓN</h2>
+        <h2>CONTRATACIÓN</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -121,7 +121,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2 align-self-center" data-aos="fade-left">
-            <img src="assets/img/que-es-reclutamiento-seleccion-personal.png" class="img-fluid" alt="">
+            <img src="assets/img/modalidades-contratacion-1170x850.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>SESPEM S.A.S.</h3>
@@ -129,40 +129,27 @@
              Somos una empresa de servicios temporales, especializada en la administración del talento humano. Nuestro departamento de recursos humanos se encarga de seleccionar hojas de vida con el fin de ofrecer a nuestros clientes personal calificado e idóneo en el ejercicio de la labor requerida.
             </p>
             <ul>
-                <li><i class="icofont-check-circled"></i> Levantamiento y definición de Perfiles. <br>
+                <li><i class="icofont-check-circled"></i> Examen médicos ocupacional de ingreso. <br>
                 <div align="justify">
                     </div></li>
-                     <li><i class="icofont-check-circled"></i> Reclutamiento de personal. <br>
+                     <li><i class="icofont-check-circled"></i> Firma de contrato laboral de acuerdo a términos legales.  <br>
                 <div align="justify">
                    </div></li>
-                     <li><i class="icofont-check-circled"></i> Entrevista Psicológica. <br>
+                     <li><i class="icofont-check-circled"></i> Apertura de cuenta de nómina (Diferentes convenios bancarios).  <br>
                 <div align="justify">
                    </div></li>
-                 <li><i class="icofont-check-circled"></i> Evaluación Psicológica con pruebas especializadas para todos los niveles de cargo.  <br>
+                 <li><i class="icofont-check-circled"></i> Inducción de la Empresa y en Seguridad y salud en el Trabajo.  <br>
                 <div align="justify">
                    </div></li>
-                <li><i class="icofont-check-circled"></i> Evaluación Técnica de Habilidades.  <br>
+                <li><i class="icofont-check-circled"></i> Afiliación a Seguridad social integral.  <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Presentación de candidatos.  <br>
+                    <li><i class="icofont-check-circled"></i> Ofrecimiento de Beneficios para el trabajador.  <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Referenciación  laboral, familiar y académica. <br>
+                    <li><i class="icofont-check-circled"></i> Entrega de Dotación. <br>
                 <div align="justify">
-                   </div></li>
-                    <li><i class="icofont-check-circled"></i> Verificación de Antecedentes Judiciales y Penales.   <br>
-                <div align="justify">
-                   </div></li>
-                    <li><i class="icofont-check-circled"></i>Informe de Selección con Enfoque en Competencias Laborales.   <br>
-                <div align="justify">
-                   </div></li>
-                    <li><i class="icofont-check-circled"></i> Estudio de Seguridad y Visita Domiciliaria.    <br>
-                <div align="justify">
-                   </div></li>
-                    <li><i class="icofont-check-circled"></i> Pruebas de Poligrafías Preempleo.  <br>
-                <div align="justify">
-                   </div></li>
-           
+                   </div></li>      
             </ul>
            <div align="justify">
              <p>
