--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <li><a href="#about">ACERCA DE</a></li>
           <li><a href="#services">SERVICIOS</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#pricing">Pricing</a></li>
+<!--          <li><a href="#pricing">Pricing</a></li> -->
           <li><a href="#team">Team</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -228,7 +228,7 @@
             <div class="icon-box">
               <div class="icon"><i class='bx bxs-user-detail' ></i></div>   
               <h4><a href="seleccion.html">Selección</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>Procesos para la selección del personal capacitado.</p>
             </div>
           </div>
 
@@ -236,15 +236,15 @@
             <div class="icon-box">
               <div class="icon"><i class='bx bx-user-plus'></i></div>   
               <h4><a href="">Reclutamiento</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>Procesos para el reclutamiento del personal capacitado.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Contratación</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="contratacion.html">Contratación</a></h4>
+             <p>Procesos para la contratación del personal capacitado.</p>
             </div>
           </div>
 
@@ -276,6 +276,75 @@
 
       </div>
     </section><!-- End Services Section -->
+    
+     <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="pricing">
+      <div class="container">
+
+        <div class="section-title">
+          <span>OTROS SERVICIOS</span>
+          <h2>OTROS SERVICIOS</h2>
+          <p>La solución ideal a las necesidades especiales en la selección y manejo de personal de su empresa</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6 col-md-6" data-aos="zoom-in" data-aos-delay="150">
+            <div class="box">
+              <h3>MANEJO DE PERSONAL</h3>
+              <h4>NOMINA</h4>
+ <!--             <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li class="na">Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="nomina.html" class="btn-buy">SABER MÁS</a>
+              </div>
+            </div>
+          </div>
+
+  <!--        <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in">
+            <div class="box featured">
+              <h3>Business</h3>
+              <h4><sup>$</sup>19<span> / month</span></h4>
+              <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li class="na">Massa ultricies mi</li>
+              </ul>
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">Buy Now</a>
+              </div>
+            </div>
+          </div> -->
+
+          <div class="col-lg-6 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
+            <div class="box">
+              <h3>SEGURIDAD Y SALUD EN EL TRABAJO</h3>
+              <h4>HSEQ</h4>
+   <!--           <ul>
+                <li>Aida dere</li>
+                <li>Nec feugiat nisl</li>
+                <li>Nulla at volutpat dola</li>
+                <li>Pharetra massa</li>
+                <li>Massa ultricies mi</li>
+              </ul> -->
+              <div class="btn-wrap">
+                <a href="#" class="btn-buy">SABER MÁS</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Pricing Section -->
+    
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
@@ -409,7 +478,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+ <!--   <section id="pricing" class="pricing">
       <div class="container">
 
         <div class="section-title">
@@ -474,7 +543,7 @@
         </div>
 
       </div>
-    </section><!-- End Pricing Section -->
+    </section> --> <!-- End Pricing Section -->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
