--- a/nomina.html
+++ b/nomina.html
@@ -106,9 +106,9 @@
 
         <ol>
           <li><a href="index.html">INICIO</a></li>
-          <li>Proceso selección</li>
+          <li>Manejo de personal</li>
         </ol>
-        <h2>SELECCIÓN</h2>
+        <h2>NOMINA</h2>
 
       </div>
     </section><!-- End Breadcrumbs -->
@@ -121,48 +121,50 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2 align-self-center" data-aos="fade-left">
-            <img src="assets/img/que-es-reclutamiento-seleccion-personal.png" class="img-fluid" alt="">
+            <img src="assets/img/La-importancia-del-contador-para-el-crecimiento-de-una-PyME-GS1-Mexico-637x400.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>SESPEM S.A.S.</h3>
-            <p class="font-italic">
+ <!--           <p class="font-italic">
              Somos una empresa de servicios temporales, especializada en la administración del talento humano. Nuestro departamento de recursos humanos se encarga de seleccionar hojas de vida con el fin de ofrecer a nuestros clientes personal calificado e idóneo en el ejercicio de la labor requerida.
-            </p>
+            </p> --> 
             <ul>
-                <li><i class="icofont-check-circled"></i> Levantamiento y definición de Perfiles. <br>
+                <li><i class="icofont-check-circled"></i> Liquidación de nómina integral. <br>
                 <div align="justify">
                     </div></li>
-                     <li><i class="icofont-check-circled"></i> Reclutamiento de personal. <br>
+                     <li><i class="icofont-check-circled"></i> Manejo y control de Incapacidades y  Licencias. <br>
                 <div align="justify">
                    </div></li>
-                     <li><i class="icofont-check-circled"></i> Entrevista Psicológica. <br>
+                     <li><i class="icofont-check-circled"></i> Control y Verificación de Novedades (Ausencias, calamidades, abandonos de cargo,                                                   renuncias).<br>
                 <div align="justify">
                    </div></li>
-                 <li><i class="icofont-check-circled"></i> Evaluación Psicológica con pruebas especializadas para todos los niveles de cargo.  <br>
+                 <li><i class="icofont-check-circled"></i>  Pagos de nómina quincenal o mensual. <br>
                 <div align="justify">
                    </div></li>
-                <li><i class="icofont-check-circled"></i> Evaluación Técnica de Habilidades.  <br>
+                <li><i class="icofont-check-circled"></i>  Procesos disciplinarios y laborales.  <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Presentación de candidatos.  <br>
+                    <li><i class="icofont-check-circled"></i> Liquidación y pago de seguridad social integral. <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Referenciación  laboral, familiar y académica. <br>
+                    <li><i class="icofont-check-circled"></i> Liquidación y pago de Prestaciones sociales. <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Verificación de Antecedentes Judiciales y Penales.   <br>
+                    <li><i class="icofont-check-circled"></i>  Proceso de retiro del empleado.   <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i>Informe de Selección con Enfoque en Competencias Laborales.   <br>
+                    <li><i class="icofont-check-circled"></i>  Encuesta de Retiro.  <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Estudio de Seguridad y Visita Domiciliaria.    <br>
+                    <li><i class="icofont-check-circled"></i> Página web para consulta de desprendibles de pago, certificados laborales, Certificados de ingresos y retenciones entre otros.  <br>
                 <div align="justify">
                    </div></li>
-                    <li><i class="icofont-check-circled"></i> Pruebas de Poligrafías Preempleo.  <br>
+                    <li><i class="icofont-check-circled"></i>  Supervisión Operativa del cumplimiento del contrato.  <br>
                 <div align="justify">
                    </div></li>
-           
+                     <li><i class="icofont-check-circled"></i>  Evaluación de Desempeño a los empleados en Misión.   <br>
+                <div align="justify">
+                   </div></li>    
             </ul>
            <div align="justify">
              <p>
