--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li><a href="#portfolio">Portfolio</a></li>
 <!--          <li><a href="#pricing">Pricing</a></li> -->
           <li><a href="#team">Team</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+<!--          <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -87,6 +87,12 @@
               <li><a href="#">Drop Down 2</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li> -->
+           <li class="drop-down"><a href="">OFICINA VIRTUAL</a>
+            <ul>
+              <li><a href="https://sorttime.co/Sorttime2/Oficina/SPM/Inicio.aspx">SESPEM</a></li>
+              <li><a href="https://sorttime.co/Sorttime2/Oficina/BUS/Inicio.aspx">BUSCAMOS</a></li>
             </ul>
           </li>
           <li><a href="#contact">CONTACTENOS</a></li>
@@ -335,7 +341,7 @@
                 <li>Massa ultricies mi</li>
               </ul> -->
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">SABER MÁS</a>
+                <a href="hseq.html" class="btn-buy">SABER MÁS</a>
               </div>
             </div>
           </div>
