--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
           <li class="active"><a href="index.html">INICIO</a></li>
           <li><a href="#about">ACERCA DE</a></li>
           <li><a href="#services">SERVICIOS</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+ <!--         <li><a href="#portfolio">Portfolio</a></li>
 <!--          <li><a href="#pricing">Pricing</a></li> -->
-          <li><a href="#team">Team</a></li>
+ <!--         <li><a href="#team">Team</a></li>
 <!--          <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -241,7 +241,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="150">
             <div class="icon-box">
               <div class="icon"><i class='bx bx-user-plus'></i></div>   
-              <h4><a href="">Reclutamiento</a></h4>
+              <h4><a href="reclutamiento.html">Reclutamiento</a></h4>
               <p>Procesos para el reclutamiento del personal capacitado.</p>
             </div>
           </div>
@@ -357,16 +357,16 @@
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>INFORMACIÓN ADICIONAL</h3>
+          <p> PROTOCOLO DE BIOSEGURIDAD PARA LA PREVENCION DE LA TRANSMISION DEL COVID-19  - SESPEM</p>
+          <a class="cta-btn" href="adicional.html">ingresar aquí</a>
         </div>
 
       </div>
     </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+ <!--   <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title">
@@ -552,7 +552,7 @@
     </section> --> <!-- End Pricing Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+ <!--   <section id="team" class="team">
       <div class="container">
 
         <div class="section-title">
@@ -674,28 +674,28 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                  <input type="text" name="name" class="form-control" id="name" placeholder="NOMBRE" data-rule="minlen:4" data-msg="Por favor introduzca un nombre" />
                   <div class="validate"></div>
                 </div>
                 <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <input type="email" class="form-control" name="email" id="email" placeholder="EMAIL" data-rule="email" data-msg="por favor introduzca un Email valido" />
                   <div class="validate"></div>
                 </div>
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="ASUNTO" data-rule="minlen:4" data-msg="por favor introduzca un asunto" />
                 <div class="validate"></div>
               </div>
               <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor escriba un mensaje" placeholder="MENSAJE"></textarea>
                 <div class="validate"></div>
               </div>
               <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="loading">Cargando</div>
+                <div class="error-message">A ocurrido un error</div>
+                <div class="sent-message">Su mensaje se a enviado. Gracias!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">ENVIAR MENSAJE</button></div>
             </form>
           </div>
 
@@ -738,25 +738,25 @@
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">Acerca de</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Servicios</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+<!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Servicios</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="seleccion.html">Selección</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Reclutamiento</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contratacion.html">Contratación</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="nomina.html">Manejo de personal/Nomina</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="hseq.html">Seguridad y salud en el trabajo</a></li>
             </ul>
-          </div>
+          </div>  
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>SESPEM</h4> 
+            <p>Su aliado estratégico con el que siempre podrás contar.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
