--- a/nomina.html
+++ b/nomina.html
@@ -213,7 +213,7 @@
 
   </main><!-- End #main -->
 
- <!-- ======= Footer ======= -->
+<!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -225,8 +225,8 @@
                <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
               <br><p>
                 Pie de la Popa, Carrera 29C No. 19 - 43, Cartagena, Bolívar. <br>
-                Cra. 3a #57-84, Bogotá <br>
-                Calle 16 #6-60, Centro, Valledupar, Cesar <br>
+                Cra. 3a #57-84, Bogotá. <br>
+                Calle 16 #6-60, Centro, Valledupar, Cesar. <br>
                 Cra 49 # 72 - 193 centro ejecutivo 74  oficina 8, Barranquilla, Atlantico.<br><br>
               </p>
               <div class="social-links mt-3">
@@ -243,27 +243,27 @@
             <h4>Enlaces</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
-<!--              <li><i class="bx bx-chevron-right"></i> <a href="#about">Acerca de</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Servicios</a></li> -->
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#about">Acerca de</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Servicios</a></li>
+<!--              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> -->
             </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Servicios</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="seleccion.html">Selección</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Reclutamiento</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contratacion.html">Contratación</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="nomina.html">Manejo de personal/Nomina</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="hseq.html">Seguridad y salud en el trabajo</a></li>
             </ul>
-          </div>
+          </div>  
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <h4>SESPEM</h4> 
+            <p>Su aliado estratégico con el que siempre podrás contar.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
