--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2 align-self-center" data-aos="fade-left">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/about.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>SESPEM S.A.S.</h3>
