--- a/adicional.html
+++ b/adicional.html
@@ -143,47 +143,47 @@
             En este apartado encontraras todo lo relacionado con el Covid-19 y nuestra empresa SESPEM S.A.S. protocolos y otras medidas adoptadas por nuestra organización para esta pandemia.   
           </p>
            <i class="icofont-check-circled"> 
-               <a href="files/protocolo/Gu%C3%ADa%20666%20bioseguridad%20todos%20los%20sectores.xlsx" target="_blank"><fount>Guía 666 bioseguridad todos los sectores</fount></a></i>
+               <a href="files/protocolo/Gu%C3%ADa%20666%20bioseguridad%20todos%20los%20sectores.xlsx" target="_blank"><fount style="color:black">Guía 666 bioseguridad todos los sectores</fount></a></i>
                 <div align="justify">
                     </div>
            <i class="icofont-check-circled"> 
-               <a href="files/protocolo/Lista%20de%20Chequeo.xlsx" target="_blank"><fount>Lista de Chequeo</fount></a></i>
+               <a href="files/protocolo/Lista%20de%20Chequeo.xlsx" target="_blank"><fount style="color:black">Lista de Chequeo</fount></a></i>
                 <div align="justify">
                     </div>
           <i class="icofont-check-circled"> 
-               <a href="files/protocolo/MANUAL%20INTEGRADO%20DEL%20GRUPO%20SESPEM%20%20.pdf" target="_blank"><fount>Manual Integrado Del GRUPO SESPEM  </fount></a></i>
+               <a href="files/protocolo/MANUAL%20INTEGRADO%20DEL%20GRUPO%20SESPEM%20%20.pdf" target="_blank"><fount style="color:black">Manual Integrado Del GRUPO SESPEM  </fount></a></i>
                 <div align="justify">
                     </div>
                     <i class="icofont-check-circled"> 
-               <a href="files/protocolo/Matriz%20Comunicacion.xlsx" target="_blank"><fount>Matriz Comunicacion</fount></a></i>
+               <a href="files/protocolo/Matriz%20Comunicacion.xlsx" target="_blank"><fount style="color:black">Matriz Comunicacion</fount></a></i>
                 <div align="justify">
                     </div>
             <i class="icofont-check-circled"> 
-               <a href="files/protocolo/Matriz%20de%20capacitaciones%20Sars,%20Cov2-Covid19.xlsx" target="_blank"><fount>Matriz de capacitaciones Sars, Cov2-Covid19</fount></a></i>
+               <a href="files/protocolo/Matriz%20de%20capacitaciones%20Sars,%20Cov2-Covid19.xlsx" target="_blank"><fount style="color:black">Matriz de capacitaciones Sars, Cov2-Covid19</fount></a></i>
                 <div align="justify">
                     </div>
             <i class="icofont-check-circled"> 
-               <a href="files/protocolo/MINTRABAJO%20RESOLUCION%20#%20735%20HORAS%20EXTRAS%20SESPEM%20-%20nacional.pdf" target="_blank"><fount>Mintrabajo resolución # 735 horas extras</fount></a></i>
+               <a href="files/protocolo/MINTRABAJO%20RESOLUCION%20#%20735%20HORAS%20EXTRAS%20SESPEM%20-%20nacional.pdf" target="_blank"><fount style="color:black">Mintrabajo resolución # 735 horas extras</fount></a></i>
                 <div align="justify">
                     </div>
             <i class="icofont-check-circled"> 
-               <a href="files/protocolo/PROTOCOLO%20DE%20BIOSEGURIDAD%20PARA%20LA%20PREVENSION%20DE%20LA%20TRANSMISION%20DEL%20COVID%2019%20%20GRUPO%20SESPEM.docx" target="_blank"><fount>Protocolo de bioseguridad para la prevención de la transmisión del covid 19  grupo sespem</fount></a></i>
+               <a href="files/protocolo/PROTOCOLO%20DE%20BIOSEGURIDAD%20PARA%20LA%20PREVENSION%20DE%20LA%20TRANSMISION%20DEL%20COVID%2019%20%20GRUPO%20SESPEM.docx" target="_blank"><fount style="color:black">Protocolo de bioseguridad para la prevención de la transmisión del covid 19  grupo sespem</fount></a></i>
                 <div align="justify">
                     </div>
              <i class="icofont-check-circled"> 
-               <a href="files/protocolo/RECLAMENTO%20DE%20HIGIENE%20SEGURIDAD%20Y%20SALUD%20EN%20EL%20TRABAJO.pdf" target="_blank"><fount>Reglamento de higiene seguridad y salud en el trabajo</fount></a></i>
+               <a href="files/protocolo/RECLAMENTO%20DE%20HIGIENE%20SEGURIDAD%20Y%20SALUD%20EN%20EL%20TRABAJO.pdf" target="_blank"><fount style="color:black">Reglamento de higiene seguridad y salud en el trabajo</fount></a></i>
                 <div align="justify">
                     </div>
             <i class="icofont-check-circled"> 
-               <a href="files/protocolo/Reglamento%20Interno%20De%20Trabajo%20SESPEM%20SAS.pdf" target="_blank"><fount>Reglamento Interno De Trabajo SESPEM SAS</fount></a></i>
+               <a href="files/protocolo/Reglamento%20Interno%20De%20Trabajo%20SESPEM%20SAS.pdf" target="_blank"><fount style="color:black">Reglamento Interno De Trabajo SESPEM SAS</fount></a></i>
                 <div align="justify">
                     </div>
              <i class="icofont-check-circled"> 
-               <a href="files/protocolo/RESOLUCION%2000899%20%20DE%20FUNCIONAMIENTO%20DE%20SESPEM.pdf" target="_blank"><fount>Resolución 00899 de funcionamiento de SESPEM SAS</fount></a></i>
+               <a href="files/protocolo/RESOLUCION%2000899%20%20DE%20FUNCIONAMIENTO%20DE%20SESPEM.pdf" target="_blank"><fount style="color:black">Resolución 00899 de funcionamiento de SESPEM SAS</fount></a></i>
                 <div align="justify">
                     </div>
                                  <i class="icofont-check-circled"> 
-               <a href="files/protocolo/Test%20COVID-19.xlsx" target="_blank"><fount>Test COVID-19</fount></a></i>
+               <a href="files/protocolo/Test%20COVID-19.xlsx" target="_blank"><fount style="color:black">Test COVID-19</fount></a></i>
                 <div align="justify">
                     </div>
         </div>
