--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li class="active"><a href="index.html">INICIO</a></li>
           <li><a href="#about">ACERCA DE</a></li>
           <li><a href="#services">SERVICIOS</a></li>
- <!--         <li><a href="#portfolio">Portfolio</a></li>
+           <li><a href="#cta">ADICIONAL</a></li>
 <!--          <li><a href="#pricing">Pricing</a></li> -->
  <!--         <li><a href="#team">Team</a></li>
 <!--          <li class="drop-down"><a href="">Drop Down</a>
@@ -125,9 +125,12 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
             <h3>SESPEM S.A.S.</h3>
-            <p class="font-italic">
-             Somos una empresa de servicios temporales, especializada en la administración del talento humano. Nuestro departamento de recursos humanos se encarga de seleccionar hojas de vida con el fin de ofrecer a nuestros clientes personal calificado e idóneo en el ejercicio de la labor requerida.
+            <div align="justify">
+             <p class="font-italic"> 
+             Somos una empresa de servicios temporales, especializada en la administración del talento humano. Nuestro departamento de recursos humanos se encarga de seleccionar hojas de vida con el fin de ofrecer a nuestros clientes personal calificado e idóneo en el ejercicio de la labor requerida.   
             </p>
+            </div>
+            <br>
             <ul>
                 <li><i class="icofont-check-circled"></i> PROPÓSITO CORPORATIVO <br>
                 <div align="justify">
@@ -633,10 +636,10 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Nuestra direcciones</h3>
-              <p>Pie de la Popa, Carrera 29C No. 19 - 43, Cartagena, Bolívar.</p>
-              <p>Cra. 3a #57-84, Bogotá.</p>
-              <p>Calle 16 #6-60, Centro, Valledupar, Cesar.</p>
-              <p>Cra 49 # 72 - 193 centro ejecutivo 74 oficina 8, Barranquilla, Atlantico.</p>
+              <p>Cartagena, Bolívar, Pie de la Popa, Carrera 29C No. 19 - 43.</p>
+              <p>Bogotá, Cra. 3a #57-84.</p>
+              <p>Valledupar, Cesar, Calle 16 #6-60, Centro.</p>
+              <p>Barranquilla, Atlantico, Cra 49 # 72 - 193 centro ejecutivo 74 oficina 8.</p>
             </div>
           </div>
 
@@ -647,7 +650,7 @@
               <p>rhumanos3@gruposespem.com</p>
               <p>rhumanos7@gruposespem.com</p>
               <p>servicioalclientevpar@gruposespem.com</p>
-              <p>pasante.rhumanosbta@gruposespem.com</p>
+              <p>rhumanosbta@gruposespem.com</p>
             </div>
           </div>
 
@@ -717,10 +720,10 @@
       <!--        <h3>Day</h3> -->
                <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
               <br><p>
-                Pie de la Popa, Carrera 29C No. 19 - 43, Cartagena, Bolívar. <br>
-                Cra. 3a #57-84, Bogotá. <br>
-                Calle 16 #6-60, Centro, Valledupar, Cesar. <br>
-                Cra 49 # 72 - 193 centro ejecutivo 74  oficina 8, Barranquilla, Atlantico.<br><br>
+                <i class="icofont-check-circled"></i> Pie de la Popa, Carrera 29C No. 19 - 43, Cartagena, Bolívar. <br>
+                <i class="icofont-check-circled"></i> Cra. 3a #57-84, Bogotá. <br>
+               <i class="icofont-check-circled"></i>  Calle 16 #6-60, Centro, Valledupar, Cesar. <br>
+               <i class="icofont-check-circled"></i>  Cra 49 # 72 - 193 centro ejecutivo 74  oficina 8, Barranquilla, Atlantico.<br><br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
