--- a/index.html
+++ b/index.html
@@ -636,10 +636,11 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Nuestra direcciones</h3>
-              <p>Cartagena, Bolívar, Pie de la Popa, Carrera 29C No. 19 - 43.</p>
-              <p>Bogotá, Cra. 3a #57-84.</p>
-              <p>Valledupar, Cesar, Calle 16 #6-60, Centro.</p>
-              <p>Barranquilla, Atlantico, Cra 49 # 72 - 193 centro ejecutivo 74 oficina 8.</p>
+               <p>Barranquilla, Cra 49 # 72 - 193 centro ejecutivo 74 oficina 8.</p>
+               <p>Bogotá, Cra. 3a #57-84.</p>
+              <p>Cartagena, Pie de la Popa, Cra 29C No. 19 - 43.</p>
+              <p>Valledupar, Calle 16 #6-60, Centro.</p>
+             
             </div>
           </div>
 
@@ -647,10 +648,10 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
-              <p>rhumanos3@gruposespem.com</p>
-              <p>rhumanos7@gruposespem.com</p>
-              <p>servicioalclientevpar@gruposespem.com</p>
-              <p>rhumanosbta@gruposespem.com</p>
+               <p>Barranquilla. rhumanos7@gruposespem.com</p>
+                 <p>Bogotá. rhumanosbta@gruposespem.com</p>
+              <p>Cartagenar. humanos3@gruposespem.com</p>      
+              <p>Valledupar. servicioalclientevpar@gruposespem.com</p>
             </div>
           </div>
 
